%%{
    init: {
        'theme': 'forest',
        'layout': 'elk',
        'themeVariables': {'fontSize': '32px'},
        'themeCSS': '.edgeLabel, .edgeLabel p { font-size: 32px !important; } .relationshipLine { stroke-width: 1.5px !important; }'
    }
}%%
erDiagram
    direction RL
    BRANCHES {
        bigint id PK
        string location
    }
    USERS {
        bigint id PK
        string username UK
        string password
        string name
        string email UK
        timestamp email_verified_at
        bigint branch_id FK
        bigint siswa_id FK
        boolean is_active
        boolean must_change_password
    }
    AYAH {
        bigint id PK
        string nama
        string pendidikan_terakhir
        string pekerjaan
        string email
        timestamp email_verified_at
    }
    IBU {
        bigint id PK
        string nama
        string pendidikan_terakhir
        string pekerjaan
        string email
        timestamp email_verified_at
    }
    WALIS {
        bigint id PK
        string nama
        string pekerjaan
        text alamat
        string no_hp
        text keterangan
        string email
        timestamp email_verified_at
    }
    KATEGORIS {
        bigint id PK
        bigint branch_id FK
        string nama
    }
    KELAS {
        bigint id PK
        enum jenjang
        string nama
        bigint branch_id FK
        int level
    }
    SISWAS {
        bigint id PK
        string nis UK
        string nisn UK
        string nama
        string jenis_kelamin
        string tempat_lahir
        string tanggal_lahir
        string agama
        string alamat
        bigint ayah_id FK
        bigint ibu_id FK
        bigint wali_id FK
        enum jenjang
        bigint kelas_id FK
        bigint kategori_id FK
        string asal_sekolah
        string kelas_diterima
        string tahun_diterima
        enum status
        text keterangan
        bigint branch_id FK
        char batch_reference
    }

    BRANCHES ||--o{ USERS : ""
    BRANCHES ||--o{ SISWAS : ""
    BRANCHES ||--o{ KELAS : ""
    BRANCHES ||--o{ KATEGORIS : ""
    AYAH ||--o{ SISWAS : ""
    IBU ||--o{ SISWAS : ""
    WALIS ||--o{ SISWAS : ""
    KELAS ||--o{ SISWAS : ""
    KATEGORIS ||--o{ SISWAS : ""
    SISWAS ||--o| USERS : ""
